<resources>
    <string name="app_name">Musication</string>
    <string name="action_settings">Settings</string>
    <string name="usu_rio">Usuário</string>
    <string name="senha">Senha</string>
    <string name="digite_o_usu_rio_aqui">Digite o usuário aqui</string>
    <string name="digite_a_senha_aqui">Digite a senha aqui</string>
    <string name="musication">Musication</string>
    <string name="_2018_universidade_de_s_o_paulo">© 2018 Universidade de São Paulo</string>
    <string name="breno_l_vio_silva_de_almeida_10276675">Breno Lívio Silva de Almeida 10276675</string>
    <string name="daniel_eiji_martins_chiyo_10276960">Daniel Eiji Martins Chiyo</string>
    <string name="lucas_albano_de_oliveira_10377688">Lucas Albano de Oliveira</string>
    <string name="todo">TODO</string>
    <string name="criar_perfil">Criar perfil</string>
    <string name="bem_vindo_a">Bem vindo(a)</string>
    <string name="entre_com_seu_perfil">Entre com seu perfil:</string>
    <string name="entrar">Entrar</string>
    <string name="breno_l_vio_silva_de_almeida">Breno Lívio Silva de Almeida</string>
</resources>
